fix overflow mobile device

--- a/scss/Layouts/_resume.scss
+++ b/scss/Layouts/_resume.scss
@@ -1,4 +1,5 @@
 .resume {
+  overflow-x: visible;
   @extend %widthCenter;
   padding-top: 96px;
   background-color: $white;
